tests/neg-custom-args/captures/sep-leak-problem-unboxed.check
-- Error: tests/neg-custom-args/captures/sep-leak-problem-unboxed.scala:20:51 ------------------------------------------
20 |  val f: Box[Async^] => Unit = (x: Box[Async^]) => useBoxedAsync(x) // error
   |                                                   ^^^^^^^^^^^^^
   |                              Local reach capability x* leaks into capture scope of an enclosing function.
   |                              You could try to abstract the capabilities referred to by x* in a capset variable.
-- Error: tests/neg-custom-args/captures/sep-leak-problem-unboxed.scala:21:37 ------------------------------------------
21 |  val f0: Box[Async^] => Unit = x => useBoxedAsync(x) // // error
   |                                     ^^^^^^^^^^^^^
   |                              Local reach capability x* leaks into capture scope of an enclosing function.
   |                              You could try to abstract the capabilities referred to by x* in a capset variable.
-- Error: tests/neg-custom-args/captures/sep-leak-problem-unboxed.scala:23:32 ------------------------------------------
23 |  val f1: Box[Async^] => Unit = useBoxedAsync(_) // error
   |                                ^^^^^^^^^^^^^
   |                            Local reach capability _$1* leaks into capture scope of an enclosing function.
   |                            You could try to abstract the capabilities referred to by _$1* in a capset variable.
-- Error: tests/neg-custom-args/captures/sep-leak-problem-unboxed.scala:24:32 ------------------------------------------
24 |  val f2: Box[Async^] => Unit = useBoxedAsync // error
   |                                ^^^^^^^^^^^^^
   |                              Local reach capability x* leaks into capture scope of an enclosing function.
   |                              You could try to abstract the capabilities referred to by x* in a capset variable.
